@@ -708,9 +708,10 @@ END;
     {
         $apiKey = Configuration::get('PACKETERY_API_KEY');
         $packeteryOrder = Db::getInstance()->getRow(
-            'SELECT `po`.`is_carrier`, `po`.`name_branch`, `c`.`iso_code` AS `country`
+            'SELECT `pa`.`is_pickup_point`, `po`.`name_branch`, `c`.`iso_code` AS `country`
             FROM `' . _DB_PREFIX_ . 'packetery_order` `po`
             JOIN `' . _DB_PREFIX_ . 'orders` `o` ON `o`.`id_order` = `po`.`id_order`
+            JOIN `' . _DB_PREFIX_ . 'packetery_address_delivery` `pa` ON `o`.`id_carrier` = `pa`.`id_carrier`
             JOIN `' . _DB_PREFIX_ . 'address` `a` ON `a`.`id_address` = `o`.`id_address_delivery` 
             JOIN `' . _DB_PREFIX_ . 'country` `c` ON `c`.`id_country` = `a`.`id_country`
             WHERE `po`.`id_order` = ' . ((int)$params['id_order'])
@@ -723,10 +724,10 @@ END;
         $this->context->controller->addJS(self::WIDGET_URL);
         $this->context->controller->addJS($this->_path . 'views/js/admin_order.js?v=' . $this->version);
 
-        $isCarrier = (bool)$packeteryOrder['is_carrier'];
-        $this->context->smarty->assign('isCarrier', $isCarrier);
+        $isPickupPointDelivery = (bool)$packeteryOrder['is_pickup_point'];
+        $this->context->smarty->assign('isPickupPointDelivery', $isPickupPointDelivery);
         $this->context->smarty->assign('branchName', $packeteryOrder['name_branch']);
-        if (!$isCarrier) {
+        if ($isPickupPointDelivery) {
             $employee = Context::getContext()->employee;
             $widgetOptions = [
                 'api_key' => $apiKey,
